--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 PORT=3000
 NODE_ENV=production
-REACT_APP_FROND_URL=https://api.prod.example.com
+REACT_APP_FROND_URL=https://main.d11mnl7rsxyx0t.amplifyapp.com
