--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^20.11.20",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/pg": "^8.11.2",
     "@types/pug": "^2.0.10",
     "@types/request": "^2.48.12",
     "@types/request-promise": "^4.1.51",
