--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/errorhandler": "^1.5.3",
     "@types/eslint": "^8.56.3",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.20",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
