--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,7 @@ PORT=3000
 NODE_ENV=production
 REACT_URL_BACKEND=http://localhost:3000 
 SECRETORPRIVATEKEY=AYWWQYDBEYYEUQWBEYBDWQYUDB
+AWS_BUCKET_NAME=momo-storage
+AWS_BUCKET_REGION=us-east-1
+AWS_PUBLIC_KEY=AKIA5YRTIYHCTW2PZVNO
+AWS_SECRET_KEY=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
