--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
   "author": "David Fernando Valenzuela Pardo",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.533.0",
+    "@aws-sdk/s3-request-presigner": "^3.533.0",
     "async": "^3.2.5",
+    "aws-sdk": "^2.1578.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "node": "^21.6.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -52,7 +57,9 @@
     "@types/errorhandler": "^1.5.3",
     "@types/eslint": "^8.56.3",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.4.4",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.20",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
